<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.automation</groupId>
    <artifactId>automation-integration</artifactId>
    <packaging>pom</packaging>
    <version>1-SNAPSHOT</version>
    <modules>
        <module>automation-integration-framework</module>
        <module>automation-integration-test</module>
        <module>automation-integration-config</module>
    </modules>

    <name>automation-integration</name>

    <properties>
            <skipTests>true</skipTests>
            <suite/> <!-- suite is used when we are running test with surefire plugin i.e.: surefire:test -Dsuite=...  -->
            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            <jdk.version>17</jdk.version>
            <kotlin.version>1.7.20</kotlin.version>
            <selenium.version>4.8.0</selenium.version>
            <appium.version>8.2.0</appium.version>
            <testng.version>7.6.2-SNAPSHOT</testng.version>
            <mockito.version>5.1.1</mockito.version>
            <groovy-all.version>3.0.13</groovy-all.version>
            <rest-assured.version>5.2.0</rest-assured.version>
            <postgresql.version>42.4.1</postgresql.version>
            <log4j.version>2.19.0</log4j.version>
            <json-simple.version>1.1</json-simple.version>
            <pdfbox.version>2.0.24</pdfbox.version>
            <extent-report.version>5.0.9</extent-report.version>
            <rp-agent-java-testng.version>5.1.3</rp-agent-java-testng.version>
            <rp-logger-java-log4j.version>5.1.5</rp-logger-java-log4j.version>
            <webdrivermanager.version>5.1.1</webdrivermanager.version>
            <opencsv.version>5.7.1</opencsv.version>
            <fasterxml.jackson.version>2.14.1</fasterxml.jackson.version>

            <!-- JVM options -->
            <jvm.options>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.options> <!-- used to fix appium issue https://github.com/cglib/cglib/issues/191,
        https://github.com/appium/java-client/issues/1619 -->
            <argLine.options>-Xmx3072m ${jvm.options} -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine.options>

            <maven.compiler.source>17</maven.compiler.source>
            <maven.compiler.target>17</maven.compiler.target>
            <maven-surefire.version>3.0.0-M7</maven-surefire.version>
            <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
            <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
            <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
            <maven-jaxb2-plugin.version>0.15.2</maven-jaxb2-plugin.version>

            <findbugs-rules.version>100.0.141</findbugs-rules.version>
            <spring-core.version>5.3.23</spring-core.version>
            <spring-vault.version>2.1.3.RELEASE</spring-vault.version>
            <javafaker.version>1.0.2</javafaker.version>
            <awaitility.version>4.0.3</awaitility.version>
            <aspectj.version>1.9.9.1</aspectj.version>
            <allure-maven.version>2.10.0</allure-maven.version>
            <allure-report.version>2.20.1</allure-report.version>
            <lombok.version>1.18.20</lombok.version>
            <dependency-check-maven.version>8.1.0</dependency-check-maven.version>

            <!-- upgrade dependencies, services and orchestrators are NOT updated by mergebot, should be done manually -->
    </properties>
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>libs-release</name>
            <url>https://artifactory.build.upgrade.com/artifactory/libs-release</url>
        </repository>
        <repository>
            <snapshots/>
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>https://artifactory.build.upgrade.com/artifactory/libs-snapshot</url>
        </repository>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>
   <build>
       <finalName>automation</finalName>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.1.0</version>
        </plugin>
    </plugins>
   </build>
    <dependencies>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>${groovy-all.version}</version>
            <type>pom</type>
            <exclusions>
                <exclusion>
                    <groupId>org.codehaus.groovy</groupId>
                    <artifactId>groovy-test</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.codehaus.groovy</groupId>
                    <artifactId>groovy-test-junit5</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>5.2.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.groovy</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json-simple.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>${pdfbox.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extent-report.version}</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.23.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>0.15</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>${aspectj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjtools</artifactId>
            <version>${aspectj.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-report.version}</version>
        </dependency>
        <dependency>
            <groupId>com.epam.reportportal</groupId>
            <artifactId>agent-java-testng</artifactId>
            <version>${rp-agent-java-testng.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.validation</groupId>
                    <artifactId>validation-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-gmail</artifactId>
            <version>v1-rev20211108-1.32.1</version>
        </dependency>
        <!-- manually updating transient dependency of google-api-services-gmail as it has security vulnerability -->
        <dependency>
            <groupId>com.google.oauth-client</groupId>
            <artifactId>google-oauth-client</artifactId>
            <version>1.34.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
    </dependencies>
    
</project>